--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,7 +1,9 @@
-$brand-color:         #fede00;
+$brand-color:         #ffc801;
 $highlight:           lighten($brand-color, 35%);
-$text-color:          #0b0404;
-$muted-text-color:    #64644B;
+$title-color:         #6a9c45;
+$text-color:          #2e2b2b;
+$muted-text-color:    #59aea9;
+$secondary-color:     #6a9c45;
 $font-family:         "EB Garamond", Garamond, "Times New Roman", serif;
 
 $on-bigphone:         375px;
