layout clean ups and adjustments

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -3,7 +3,7 @@ $highlight:           lighten($brand-color, 35%);
 $title-color:         #6a9c45;
 $text-color:          #2e2b2b;
 $muted-text-color:    #59aea9;
-$secondary-color:     #6a9c45;
+$secondary-color:     #d1363a;
 $font-family:         "EB Garamond", Garamond, "Times New Roman", serif;
 
 $on-bigphone:         375px;
