--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -5,7 +5,7 @@
     <ul>
       <li>
         <a href="{{ '/' | prepend: site.baseurl }}">
-          Home
+          Página inicial
         </a>
       </li>
     {% for item in site.data.menu %}
